[package]
name = "ltc-modulate"
version = "0.1.0"
description = "Modulate a binary file for uplaoding to a Chibitronics Love-to-Code sticker"
authors = ["Sean Cross <sean@xobs.io>"]
license = "MIT"
repository = "https://github.com/xobs/ltc-modulate"

[dependencies]
murmur3 = "*"
rust-crypto = "*"
byteorder = "*"
clap = "*"