[package]
name = "ltc-modulate"
version = "1.3.18"
description = "Modulate a binary file for uplaoding to a Chibitronics Love-to-Code sticker"
authors = ["Sean Cross <sean@xobs.io>"]
license = "MIT"
repository = "https://github.com/xobs/ltc-modulate"

[dependencies]
byteorder = "1.0.0"
clap = "2.19.3"
cpal = "0.5.1"
elf = "0.0.10"
murmur3 = "0.3.0"
rust-crypto = "0.2.36"
